Fix long links breaking layout on smaller screens.

--- a/static/styles.css
+++ b/static/styles.css
@@ -332,6 +332,7 @@ button {
 
 a, a:visited {
 	color: var(--link-color);
+	word-break: break-word;
 }
 
 .subtext {
